# DAMNIT

./: .gitignore  .gitlab-ci.yml  AMORE-GUI.py  AMORE.json  Dockerfile  GUI.py  LICENSE  README.md  README.rst  context.py  context_3217.py  environment.yml  launch-gui.py  mkdocs.yml  pyproject.toml
.github/dependabot/: constraints.txt
.github/workflows/: build-push-docker.yml  docker-image.yml  tests.yml
GUI/: plot.py  table.py
IO/: zmq.py
amore_mid_prototype/: base_context_file.py  cli.py  context.py  definitions.py  extract_data.py  listener.py  log.py  migrations.py  util.py
amore_mid_prototype/backend/: __init__.py  context.py  db.py  extract_data.py  listener.py  supervisord.py  test_listener.py
amore_mid_prototype/ctxsupport/: README.md  ctxrunner.py  damnit_ctx.py
amore_mid_prototype/gui/: .main_window.py.swo  .main_window.py.swp  PyQt_elements.py  editor.py  kafka.py  main_window.py  plot.py  reprocess.py  table.py  user_variables.py  zmq.py  zulip_webview.py
amore_mid_prototype/gui/logsrc/: index.css  index.html  index.js
damnit/: __init__.py  api.py  base_context_file.py  cli.py  context.py  definitions.py  generate_db_schema.py  kafka.py  migrations.py  util.py
damnit/backend/: __init__.py  api.py  combine.py  combine_service.py  db.py  db_migration.py  db_migrations.py  extract_data.py  extraction_control.py  listener.py  reduce.py  sandboxing.py  service.py  supervisord.conf  supervisord.py  test_listener.py  user_variables.py
damnit/backend/db/migration/: v1_to_v2.sqlite3  v2_to_v3.sqlite3
damnit/backend/db/schema/: v0.sqlite3  v1.sqlite3  v2.sqlite3  v3.sqlite3
damnit/ctx-templates/: SA1_base.py  SA2_base.py  SA3_base.py
damnit/ctxsupport/: ctxrunner.py  damnit_ctx.py  damnit_exceptions.py  damnit_h5write.py  damnit_writing.py  find_beamtime.py  parse_metadata.py  variables.py
damnit/gui/: __init__.py  canvas.py  editor.py  kafka.py  main_window.py  markdown.py  new_context_dialog.py  new_context_dialog.ui  new_context_dialog_ui.py  open_dialog.py  open_dialog.ui  open_dialog_ui.py  plot.py  process.py  reprocess.py  roles.py  standalone_comments.py  table.py  table_filter.py  table_header.py  theme.py  user_variables.py  util.py  utils.py  web_viewer.py  widgets.py  zulip_messenger.py
docs/: api.md  backend.md  changelog.md  configuration_and_management.md  contact.md  data-storage.md  getting-started.md  gui.md  index.md  internals.md  migrations.md
frontend/: AMORE-GUI.py
frontend/GUI/: plot.py  table.py
systemd/: damnit-combiner.service  damnit-listener.service  damnit-services.target
tests/: .test_gui.py.swp  conftest.py  mock_sandbox.sh  test_api.py  test_backend.py  test_cli.py  test_combine.py  test_ctx_groups.py  test_db.py  test_gui.py  test_migrations.py  test_pipeline.py  test_sandboxing.py  test_util.py  test_widgets.py
tests/helpers/: __init__.py
